--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "react-icons": "^5.5.0",
     "sanity": "^4.2.0",
     "styled-components": "^6.1.19",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
