--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.28.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -22,20 +21,20 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sanity/icons": "^3.7.4",
-    "@sanity/image-url": "^1.1.0",
-    "@sanity/vision": "^4.2.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.20.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.536.0",
-    "next": "15.4.5",
-    "next-sanity": "^10.0.7",
+    "next": "^15.5.7",
+    "next-sanity": "^11.6.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "sanity": "^4.2.0",
+    "sanity": "^4.20.3",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
