--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "lucide-react": "^0.536.0",
     "next": "^15.5.7",
     "next-sanity": "^11.6.10",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "sanity": "^4.20.3",
     "styled-components": "^6.1.19",
