--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "lenis": "^1.3.15",
     "lucide-react": "^0.536.0",
     "next": "^15.5.7",
     "next-sanity": "^11.6.10",
