--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-zoom-pan-pinch": "^3.7.0",
     "sanity": "^4.20.3",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
