--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@sanity/icons": "^3.7.4",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.20.3",
+    "@types/leaflet": "^1.9.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "lenis": "^1.3.15",
     "lucide-react": "^0.536.0",
     "next": "^15.5.7",
@@ -35,6 +37,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-zoom-pan-pinch": "^3.7.0",
     "sanity": "^4.20.3",
     "styled-components": "^6.1.19",
